--- a/requirements.txt
+++ b/requirements.txt
@@ -173,3 +173,7 @@ websockets==15.0.1
 Werkzeug==3.1.3
 widgetsnbextension==4.0.13
 xlrd==2.0.1
+Flask==2.3.2
+joblib==1.3.2
+numpy==1.24.4
+scikit-learn==1.2.2
